--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.1.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.27.2",
+    "framer-motion": "^4",
+    "luxon": "^2.4.0",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-data-table-component": "^7.5.2",
+    "react-data-table-component-extensions": "^1.6.0",
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.39.0",
+    "suneditor": "^2.43.6",
+    "suneditor-react": "^3.4.0"
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
