--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "framer-motion": "^4",
-    "luxon": "^2.4.0",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
