--- a/package.json
+++ b/package.json
@@ -26,44 +26,44 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.1.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "axios": "^0.27.2",
-    "date-fns": "^2.28.0",
-    "framer-motion": "^4",
-    "next": "12.1.6",
-    "next-auth": "^4.3.4",
-    "react": "18.1.0",
-    "react-data-table-component": "^7.5.2",
-    "react-data-table-component-extensions": "^1.6.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.2",
-    "react-icons": "^4.3.1",
-    "react-query": "^3.39.0",
-    "suneditor": "^2.43.6",
-    "suneditor-react": "^3.4.0"
+    "@chakra-ui/react": "2.3.2",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
+    "axios": "0.27.2",
+    "date-fns": "2.29.3",
+    "framer-motion": "7.3.5",
+    "next": "12.3.0",
+    "next-auth": "4.10.3",
+    "react": "18.2.0",
+    "react-data-table-component": "7.5.3",
+    "react-data-table-component-extensions": "1.6.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.35.0",
+    "react-icons": "4.4.0",
+    "react-query": "3.39.2",
+    "suneditor": "2.43.14",
+    "suneditor-react": "3.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@types/luxon": "^2.3.2",
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
+    "@types/luxon": "3.0.1",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
+    "commitizen": "4.2.5",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-plugin-prettier": "4.2.1",
     "husky": "8.0.1",
-    "lint-staged": "^12.4.2",
-    "prettier": "^2.6.2",
-    "typescript": "4.6.4"
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1",
+    "typescript": "4.8.3"
   },
   "config": {
     "commitizen": {
